# silic

./: .gitignore  mount_usb.sh  pyproject.toml  requirements.txt  silic-ui.py  silic.py  test.py
config/: default.yaml
dev/: all_server.py  audio2s3.py  compress.py  read_yaml.py  s3_compression.ipynb  s3_compression.py  test_async.py  test_pyaudio.py  test_restart.py
utils/: params.py
utils/color_log/: __init__.py  color.py  readme.md  tracing_log.py
