[tool.poetry]
name = "silic"
version = "0.1.1"
description = "This project aim to develop the solution to the bird sound classification."
authors = ["LaZoark <emersonchen086@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


torch = { version = "^2.0.0+cu118", source = "torch", markers="sys_platform == 'linux'"}
torchaudio = { version = "^2.0.1+cu118", source="torch", markers="sys_platform == 'linux'"}
torchvision = { version = "^0.15.1+cu118", source="torch", markers="sys_platform == 'linux'"}
absl-py = "1.4.0"
asttokens = "2.2.1"
backcall = "0.2.0"
boto3 = "1.26.111"
botocore = "1.29.111"
cachetools = "5.3.0"
certifi = "2022.12.7"
chardet = "4.0.0"
charset-normalizer = "3.1.0"
# click = "8.0.4"
colorama = "0.4.6"
contourpy = "1.0.7"
cycler = "0.10.0"
decorator = "5.1.1"
executing = "1.2.0"
fire = "0.5.0"
fonttools = "4.39.3"
gitdb = "4.0.10"
gitpython = "3.1.31"
# google-auth = "2.17.2"
# google-auth-oauthlib = "1.0.0"
# grpcio = "1.53.0"
# huggingface-hub = "0.13.4"
idna = "2.10"
ipython = "8.12.0"
# jedi = "0.18.2"
jmespath = "1.0.1"
kiwisolver = "1.4.4"
markdown = "3.4.3"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
nnaudio = "0.3.2"
numpy = "1.24.2"
#oauthlib = "3.2.2"
opencv-python = "4.7.0.72"
packaging = "23.0"
pandas = "2.0.0"
#parso = "0.8.3"
pickleshare = "0.7.5"
pillow = "9.5.0"
prompt-toolkit = "3.0.38"
protobuf = "4.22.1"
psutil = "5.9.4"
pure-eval = "0.2.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pybboxes = "0.1.6"
pydub = "0.25.1"
pygments = "2.15.0"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3"
pyyaml = "6.0"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
requests-toolbelt = "0.10.1"
# roboflow = "1.0.3"
rsa = "4.9"
s3transfer = "0.6.0"
# sahi = "0.11.13"
scipy = "1.10.1"
# seaborn = "0.12.2"
shapely = "2.0.1"
six = "1.16.0"
smmap = "5.0.0"
# stack-data = "0.6.2"
# tensorboard = "2.12.1"
# tensorboard-data-server = "0.7.0"
# tensorboard-plugin-wit = "1.8.1"
termcolor = "2.2.0"
terminaltables = "3.1.10"
thop = "0.1.1.post2209072238"
tqdm = "4.65.0"
traitlets = "5.9.0"
tzdata = "2023.3"
urllib3 = "1.26.15"
wcwidth = "0.2.6"
# werkzeug = "2.2.3"
wget = "3.2"
yolov5 = "7.0.11"
soundfile = "^0.12.1"
minio = "^7.2.0"
# pyaudio = "^0.2.14"
sqlalchemy = "1.4.22"
flask = "^3.0.0"
psycopg2-binary = "^2.9.9"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
# markers = "sys_platform == 'linux'"
# default = false
# secondary = true
